--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,16 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         LaTeX-Driver
-version:      0.05
+version:      0.06
 version_from: lib/LaTeX/Driver.pm
 installdirs:  site
 requires:
+    Class::Accessor:               0
+    Cwd:                           0
     Exception::Class:              0
+    File::Slurp:                   0
+    File::Spec:                    0
+    IO::File:                      0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30
