--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,19 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         LaTeX-Driver
-version:      0.07
-version_from: lib/LaTeX/Driver.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                LaTeX-Driver
+version:             0.08
+abstract:            LaTeX Driver
+license:             ~
+author:              
+    - Andrew Ford <a.ford@ford-mason.co.uk>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Class::Accessor:               0
     Cwd:                           0
     Exception::Class:              0
     File::Slurp:                   0
     File::Spec:                    0
     IO::File:                      0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
