--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,30 @@
---- #YAML:1.0
-name:                LaTeX-Driver
-version:             0.08
-abstract:            LaTeX Driver
-license:             ~
-author:              
-    - Andrew Ford <a.ford@ford-mason.co.uk>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Class::Accessor:               0
-    Cwd:                           0
-    Exception::Class:              0
-    File::Slurp:                   0
-    File::Spec:                    0
-    IO::File:                      0
+---
+abstract: 'LaTeX CatSuit'
+author:
+  - 'Jerome Eteve <jeteve@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: unknown
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: LaTeX-CatSuit
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  BSD::Resource: 0
+  Class::Accessor: 0
+  Cwd: 0
+  Exception::Class: 0
+  File::Slurp: 0
+  File::Spec: 0
+  IO::File: 0
+  Test::Exception: 0
+  Test::More: 0
+version: 1
